--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "build": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,12 @@
   "homepage": "https://github.com/Nareshn99/Project-4-url_shortner#readme",
   "dependencies": {
     "axios": "^1.1.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.6.2",
     "nodemon": "^2.0.20",
     "redis": "^3.1.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "validator": "^13.9.0"
   }
 }
